style.css
* {
    box-sizing: border-box;
    /* border: solid red; */
    
}


body {
    display: flex;
    flex-direction: column;
    font-family: Roboto;
    margin: 0;
    
}

.logo {
    font-weight: 500;
}

button:hover {
    background-color: #2a6bc6;
}


.header {
    display: flex;
    background-color: #1F2936;
    width: 100%;
    color: white;
    padding: 11px 100px;
}


.header-links {
    display: flex;
    list-style: none;
    padding: 0;
    margin: 0;
    margin-left: auto;
    gap: 16px
}

.hero {
    
    background-color: #1F2936;
    color: white;
    display: flex;
    padding: 100px;
    align-items: start;
    gap: 70px;
    /* flex-direction: row-reverse; */
    flex-wrap: wrap;
    justify-content: center;
}

.hero-text {
    /* border: solid red; */
    flex: 1;
    min-width: 300px;
    max-width: 482px;
}

.placeholder-img {
    
    flex: 1;
    display: flex;
    align-items: center;
    justify-content: center;
    flex-shrink: 0;
}

.placeholder-card {
    max-width: 300px;
    background-color: #6D747C;
    min-width: 300px;
    height: 150px;
    font-size: 13px;
    flex: 1;
    justify-content: center;
    align-items: center;
    display: flex;


}


h1, h2, h3 {
    margin: 0;
}

h2 {
    text-align: center;
    margin: 30px;
}

p, ul {
    font-size: 14px;
    color: #E5E7EB;
}

button {
    background-color: #3E87EF;
    border: none;
    color: white;
    border-radius: 5px;
    padding: 5px;
    width: 90px;
    transition: 0.1s ;
}

.carousel-container {
    padding: 0 50px;
    display: flex;
    flex-direction: column;
    /* justify-content: center; */
    align-items: center;
}


.carousel {
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 33px;
    margin-bottom: 50px;
    flex-wrap: wrap;
    min-width: 400px;

}

.item {
    max-width: 120px;
    min-width: 120px;
    color: #4B5562;
    font-size: 11px;
    text-align: center;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.item-text {
    margin-top: 7px;
}

.square {
    border: solid 3px #3E87EF;
    height: 100px;
    width: 100px;
    border-radius: 10px;
}

.quoteblock {
    background-color: #E5E7EB;
    display: flex;
    justify-content: center;
}

.quote-container {
    min-width: 350px;
    max-width: 500px;
    margin: 50px;
    
}

.quote-text {
    font-style: italic;
    font-size: 22px;
    font-weight: 100;

}

.author {
    margin-top: 12px;
    text-align: end;
    font-weight: 700;
}


.call-to-action {
    justify-content: center;
    display: flex;
}

.action-container {
    background-color: #3E87EF;
    border-radius: 5px;
    width: 802px;
    display: flex;
    align-items: center;
    justify-content: space-around;
    padding: 25px;
    gap: 20px;
    margin: 65px 40px;
    min-width: 400px;
}

h3 {
    color: white;
    font-size: 16px;
    font-weight: 500;
}

.text>p {
    margin: 0;
    /* font-weight: 300; */
    font-size: 12px;
}

.action-container>div>button {
    border: white solid 1px;
    padding: 3px;
}

.footer {
    /* flex: 1; */
    background-color: #1F2936;
    display: flex;
    text-align: center;
    align-items: center;
    justify-content: center;
    font-size: 10px;
    height: 47px;
    color: #DDDEE0;
}

